--- a/dex.css
+++ b/dex.css
@@ -215,7 +215,7 @@ main{
 .Image1{
     position: relative;
     border-style: solid;
-    background-image: url(maquette3.png);
+    background-image: url(image/maquette3.png);
     background-size: cover;
     background-repeat: no-repeat;
     border-spacing: 30px;
@@ -228,7 +228,7 @@ main{
 .Image2{
     position: relative;
     border-style: solid;
-    background-image: url(maquette1.png);
+    background-image: url(image/maquette1.png);
     background-size: cover;
     background-repeat: no-repeat;
     margin-left: 2%;
@@ -243,7 +243,7 @@ main{
     
     position: relative;
     border-style: solid ;
-    background-image: url(maquette2.png);
+    background-image: url(image/maquette2.png);
     background-size: cover;
     background-repeat: no-repeat;
     margin-left: 9%;
